--- a/Frontend/src/assets/css/responsive.scss
+++ b/Frontend/src/assets/css/responsive.scss
@@ -1,5 +1,5 @@
 /*--- Color ---*/
-$primary-color : #FF7F47;
+$primary-color : #00a599;
 $secondary-color : #304F47;
 $tertiary-color : #ffffff;
 $text-color-one:  #262339;
