--- a/Frontend/src/assets/css/style.scss
+++ b/Frontend/src/assets/css/style.scss
@@ -42,7 +42,7 @@ Last update :
 ======================*/
 
 /*--- Color ---*/
-$primary-color : #FF7F47;
+$primary-color : #00a599;
 $secondary-color : #304F47;
 $tertiary-color : #ffffff;
 $text-color-one:  #262339;
@@ -755,7 +755,7 @@ a{
   font-weight: 700;
   font-size: 13px;
   line-height: 16px;
-  color: #FF7F47;
+  color: #00a599;
 
   &:last-child{
     border: none;
@@ -1164,7 +1164,7 @@ header .header-area .main-nav {
     //         transform: translateX(10px);
 
     transform: translateX(7px);
-    color: #FF7F47;
+    color: #00a599;
   }
   header .header-area .main-nav ul li ul.sub-menu > li a:hover::before {
     opacity: 0;
@@ -1396,7 +1396,7 @@ header .header-area .main-nav {
         font-weight: 700;
         font-size: 30px;
         line-height: 37px;
-        color: #FF7F47;
+        color: #00a599;
         margin: 30px 0 50px 0;
       }
       }
@@ -2287,7 +2287,7 @@ border-radius: 50px 50px 0px 0px;
       font-weight: 700;
       font-size: 23px;
       line-height: 27px;
-      color: #FF7F47;
+      color: #00a599;
       text-transform: capitalize;
       padding-top: 20px;
       
@@ -2297,7 +2297,7 @@ border-radius: 50px 50px 0px 0px;
         font-size: 18px;
       }
       a{
-        color: #FF7F47;
+        color: #00a599;
       }
     }
   }
@@ -2603,8 +2603,8 @@ border-radius: 0px 0px 3px 3px;
       button {
         width: 172px;
         border-radius: 10px;
-        background: #FF7F47;
-        border: 1px solid #FF7F47;
+        background: #00a599;
+        border: 1px solid #00a599;
         box-sizing: border-box;
         box-shadow: 2px 2px 10px rgba(26, 34, 56, 0.18);
         border-radius: 10px;
@@ -3048,7 +3048,7 @@ p {
       .sidebar-banner-btn{
         a {
           padding: 14px 35px;
-          background: #FF7F47;
+          background: #00a599;
           border-radius: 5px;
           font-weight: 600;
           font-size: 16px;
@@ -3242,7 +3242,7 @@ p {
       .sidebar-banner-btn{
         a {
           padding: 14px 35px;
-          background: #FF7F47;
+          background: #00a599;
           border-radius: 5px;
           font-weight: 600;
           font-size: 16px;
@@ -3306,7 +3306,7 @@ li.package-card-sm{
       font-weight: 700;
       font-size: 16px;
       line-height: 22px;
-      color: #FF7F47;
+      color: #00a599;
       margin: 8px 0;
 
       i{
@@ -4063,7 +4063,7 @@ li.package-card-sm{
       .sidebar-banner-btn{
         a {
           padding: 16px 32px;
-          background: #FF7F47;
+          background: #00a599;
           border-radius: 5px;
           font-weight: 600;
           font-size: 16px;
@@ -4289,7 +4289,7 @@ li.package-card-sm{
           font-weight: 700;
           font-size: 15px;
           text-transform: capitalize;
-          color: #FF7F47;
+          color: #00a599;
 
           i{
             font-size: 18px;
