--- a/Frontend/src/assets/css/responsive.css
+++ b/Frontend/src/assets/css/responsive.css
@@ -115,7 +115,7 @@
   }
   .navbar-icons .searchbar-open i, .navbar-icons .user-dropdown-icon i {
     font-size: 20px;
-    color: #FF7F47;
+    color: #00a599;
   }
   .navbar-icons .searchbar-open i::before, .navbar-icons .user-dropdown-icon i::before {
     vertical-align: middle;
@@ -198,7 +198,7 @@
   .hamburger span {
     width: 100%;
     height: 3px;
-    background: #FF7F47;
+    background: #00a599;
     display: block;
     position: absolute;
     right: 0;
