--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -23,15 +23,15 @@ i#packageCalenderIcon{
 }
 
 .react-datepicker__day--selected, .react-datepicker__day--in-selecting-range, .react-datepicker__day--in-range, .react-datepicker__month-text--selected, .react-datepicker__month-text--in-selecting-range, .react-datepicker__month-text--in-range, .react-datepicker__quarter-text--selected, .react-datepicker__quarter-text--in-selecting-range, .react-datepicker__quarter-text--in-range, .react-datepicker__year-text--selected, .react-datepicker__year-text--in-selecting-range, .react-datepicker__year-text--in-range {
-    background-color: #ff7f47!important;
+    background-color: #00a599!important;
 }
 .react-datepicker__day--keyboard-selected, .react-datepicker__month-text--keyboard-selected, .react-datepicker__quarter-text--keyboard-selected, .react-datepicker__year-text--keyboard-selected {
     border-radius: 0.3rem;
-    background-color: #ff7f47!important;
+    background-color: #00a599!important;
     color: #fff;
 }
 .rangeslider-horizontal .rangeslider__handle:after {
-    background-color: #FF7F47!important;
+    background-color: #00a599!important;
 }
 .rangeslider-horizontal .rangeslider__fill {
     background-color: #304F47!important;
@@ -48,5 +48,5 @@ i#packageCalenderIcon{
 }
 
 header .header-area .main-nav ul li a.active {
-    color: #FF7F47!important;
+    color: #00a599!important;
 }
